--- a/style/estilo.css
+++ b/style/estilo.css
@@ -27,6 +27,12 @@
     height: 100px;
 
 }
+
+.setas{ 
+    height: 50px;
+    width: 50px;
+}
+
 .logoNav{
     height: 200px;
     width: 200px;
@@ -64,6 +70,15 @@
     flex-direction: column;
     background: linear-gradient(180deg, rgba(131,58,180,0.9047268565629377) 0%, rgba(253,29,29,0.92) 50%, rgba(252,176,69,0.9047268565629377) 100%);
     height: 400px;
+}
+
+button{
+    background-color: transparent;
+    border: none;
+}
+
+button:hover{
+    box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
 }
 
 .textoPrincipal{
