--- a/style/global.css
+++ b/style/global.css
@@ -3,3 +3,13 @@
     padding: 0;
     font-family: "Roboto", sans-serif;
 }
+
+a{
+    text-decoration: none;
+    color: black;
+
+}
+
+a:hover{
+    text-decoration:underline ;
+}
