--- a/style/estilo.css
+++ b/style/estilo.css
@@ -72,7 +72,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column; 
+    flex-direction: column;
+    background: linear-gradient(180deg, rgba(131,58,180,0.9047268565629377) 0%, rgba(253,29,29,0.92) 50%, rgba(252,176,69,0.9047268565629377) 100%);
     height: 400px;
     
 }
