--- a/style/estilo.css
+++ b/style/estilo.css
@@ -28,11 +28,6 @@
 
 }
 
-.setas{ 
-    height: 50px;
-    width: 50px;
-}
-
 .logoNav{
     height: 200px;
     width: 200px;
@@ -68,23 +63,50 @@
     padding: 10px;
     margin: 0.5;
 }
-.promocoes{
+
+.promoDestaque {
+    position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
-    flex-direction: column;
+    height: 200px; /* Ajuste conforme necessário */
+    z-index: 1; 
+}
+
+.setaEsquerda, .setaDireita {
+    position: absolute;
+    top: 45%;
+    transform: translateY(-50%);
+    background-color: transparent;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    z-index: 2; /* Garante que as setas fiquem na frente da imagem */
+}
+    
+
+.setaEsquerda {
+    left: 10px; /* Ajuste conforme necessário */
+    background-image: url('/arquivos_SVG/setaEsquerda.svg');
+    height: 196px;
+    width: 130px;
+    background-repeat: no-repeat;
+    
+}
+
+.setaDireita {
+    right: 10px; /* Ajuste conforme necessário */
+    background-image: url('/arquivos_SVG/setaDireita.svg');
+    height: 196px;
+    width: 130px;
+    background-repeat: no-repeat;
 }
 
 .promoDestaque{
     height: 400px ;
     width: 100%;
     z-index: 0;
-}
-
-button{
-    background-color: transparent;
-    border: none;
-    z-index: 1;
+    
 }
 
 button:hover{
